--- a/index.html
+++ b/index.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/styles.css">
     <title>Inicio</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <h1>BIODIVERSIDAD EN COLOMBIA </h1>
+            <a href="./pages/cundinamarca.html" class="button">Cundinamarca</a>
+            <a href="./pages/boyaca.html" class="button">Boyacá</a>
+            <a href="./pages/contactenos.html" class="button">Contactenos</a>
+        </nav>
+    </header>
+    <main>
+        <h1>Biodiversidad en Cundinamarca y Boyacá</h1>
+        <p>Explora la rica biodiversidad de estas regiones.</p>
+       
+    </main>  
+
 </body>
 </html>
